Fixed html templates imports

--- a/templates/admin/set_discount.html
+++ b/templates/admin/set_discount.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "shared/layout.html" %}
 {% block content %}
     <h2>Set Discount</h2>
     <form method="POST" action="{{ url_for('admin.set_discount') }}">
