--- a/templates/admin/add_product.html
+++ b/templates/admin/add_product.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "shared/layout.html" %}
 {% block content %}
     <h2>Add Product</h2>
     <form method="POST" action="{{ url_for('admin.add_product') }}">
