--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "shared/layout.html" %}
 {% block content %}
 <form method="POST" action="{{ url_for('auth.login') }}">
     {{ form.hidden_tag() }}
