--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -8,7 +8,7 @@
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
   </head>
   <body>
-    {% include 'header.html' %}
+    {% include 'shared/header.html' %}
     <div class="container">
       <h2 class="mt-5">Register</h2>
       <form method="POST" action="{{ url_for('auth.register') }}">
