--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    {% include 'header.html' %}
+    {% include 'shared/header.html' %}
     <div class="container mt-4">
         {% with messages = get_flashed_messages() %}
             {% if messages %}
@@ -23,7 +23,7 @@
         {% endwith %}
         {% block content %}{% endblock %}
     </div>
-    {% include 'footer.html' %}
+    {% include 'shared/footer.html' %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
