--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -44,7 +44,7 @@
         <button type="submit" class="btn btn-primary">Register</button>
       </form>
     </div>
-    {% include 'footer.html' %}
+    {% include 'shared/footer.html' %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
