--- a/templates/users/balance.html
+++ b/templates/users/balance.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "shared/layout.html" %}
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6">
@@ -7,12 +7,17 @@
             {{ form.hidden_tag() }}
             <div class="mb-3">
                 {{ form.amount.label(class="form-label") }}
-                {{ form.amount(class="form-control") }}
+                {{ form.amount(class="form-control", type="number", step="0.01") }}
             </div>
             <div class="mb-3 text-center">
                 {{ form.submit(class="btn btn-danger btn-lg w-100") }}
             </div>
         </form>
+        {% if error %}
+        <div class="alert alert-danger" role="alert">
+            {{ error }}
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
