--- a/templates/users/cart.html
+++ b/templates/users/cart.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "shared/layout.html" %}
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-8">
