--- a/templates/shared/header.html
+++ b/templates/shared/header.html
@@ -55,16 +55,16 @@
                     <a class="nav-link" href="#">My Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Offers</a>
+                    <a class="nav-link" href="#">Special offers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Thank You Price</a>
+                    <a class="nav-link" href="#">Discounts</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Eco & Farm</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">News</a>
+                    <a class="nav-link" href="#">New products</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Flavor Days</a>
