--- a/templates/shared/header.html
+++ b/templates/shared/header.html
@@ -4,44 +4,45 @@
             <a class="navbar-brand text-danger fw-bold display-4 me-5" href="{{ url_for('user.shop') }}">PARPORA</a>
         </div>
         <div class="d-flex align-items-center flex-grow-1">
-            <form class="d-flex me-3 flex-grow-1">
-                <input class="form-control flex-grow-1" type="search" placeholder="Search for products, e.g., milk" aria-label="Search">
+            <form class="d-flex me-3 flex-grow-1" role="search">
+                <input class="form-control me-2 flex-grow-1" type="search" placeholder="Search for products, e.g., milk" aria-label="Search">
+                <button class="btn btn-outline-danger" type="submit">Search</button>
             </form>
             <ul class="navbar-nav d-flex flex-row">
                 {% if current_user.is_authenticated %}
                     <li class="nav-item ms-3">
-                        <span class="nav-link text-black">Hello, {{ current_user.username }}!</span>
+                        <span class="nav-link no-hover text-black">Hello, {{ current_user.username }}!</span>
                     </li>
                     <li class="nav-item ms-3">
-                        <span class="nav-link text-black">Balance: €{{ current_user.balance }}</span>
+                        <span class="nav-link no-hover text-black">Balance: €{{ current_user.balance }}</span>
                     </li>
                     <li class="nav-item ms-3">
-                        <a class="nav-link text-dark" href="{{ url_for('user.balance') }}">Balance</a>
+                        <a class="nav-link text-black" href="{{ url_for('user.balance') }}">Balance</a>
                     </li>
                     <li class="nav-item ms-3">
-                        <a class="nav-link text-dark" href="{{ url_for('user.cart') }}">Cart</a>
+                        <a class="nav-link text-black" href="{{ url_for('user.cart') }}">Cart</a>
                     </li>
                     <li class="nav-item ms-3">
-                        <a class="nav-link text-dark" href="{{ url_for('auth.logout') }}">Logout</a>
+                        <a class="nav-link text-black" href="{{ url_for('auth.logout') }}">Logout</a>
                     </li>
                     {% if current_user.is_admin %}
                         <li class="nav-item ms-3">
-                            <a class="nav-link text-dark" href="{{ url_for('admin.admin_dashboard') }}">Admin</a>
+                            <a class="nav-link text-white" href="{{ url_for('admin.admin_dashboard') }}">Admin</a>
                         </li>
                     {% endif %}
                 {% else %}
                     <li class="nav-item ms-3">
-                        <a class="nav-link text-dark me-2" href="{{ url_for('auth.login') }}">Login</a>
+                        <a class="nav-link text-black me-2" href="{{ url_for('auth.login') }}">Login</a>
                     </li>
                     <li class="nav-item ms-3">
-                        <a class="nav-link text-dark" href="{{ url_for('auth.register') }}">Register</a>
+                        <a class="nav-link text-black" href="{{ url_for('auth.register') }}">Register</a>
                     </li>
                 {% endif %}
             </ul>
         </div>
     </div>
 </header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-red">
     <div class="container d-flex justify-content-center">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -49,25 +50,25 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Products</a>
+                    <a class="nav-link text-white active" aria-current="page" href="#">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">My Products</a>
+                    <a class="nav-link text-white" href="#">My Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Special offers</a>
+                    <a class="nav-link text-white" href="#">Special Offers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Discounts</a>
+                    <a class="nav-link text-white" href="#">Discounts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Eco & Farm</a>
+                    <a class="nav-link text-white" href="#">Eco & Farm</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">New products</a>
+                    <a class="nav-link text-white" href="#">New Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Flavor Days</a>
+                    <a class="nav-link text-white" href="#">Flavor Days</a>
                 </li>
             </ul>
         </div>
