--- a/templates/shared/shop.html
+++ b/templates/shared/shop.html
@@ -5,15 +5,20 @@
         <h2 class="text-center">Products</h2>
         <div class="list-group">
         {% for product in products %}
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+            <div class="list-group-item d-flex justify-content-between align-items-center">
                 <div>
                     <h5 class="mb-1">{{ product.name }}</h5>
-                    <p class="mb-1">€{{ product.price }} - {{ product.quantity }} in stock</p>
+                    <p class="mb-1">€{{ product.price }} - {{ product.stock }} in stock</p>
                 </div>
                 <div>
-                    <a href="{{ url_for('user.add_to_cart', product_id=product.id) }}" class="btn btn-danger btn-lg">Add to cart</a>
+                    <form action="{{ url_for('user.add_to_cart') }}" method="POST">
+                        {{ form.hidden_tag() }} 
+                        <input type="hidden" name="product_id" value="{{ product.item_id }}">
+                        <input type="hidden" name="quantity" value="1">
+                        <button type="submit" class="btn btn-danger btn-lg">Add to cart</button>
+                    </form>
                 </div>
-            </a>
+            </div>
         {% endfor %}
         </div>
     </div>
