--- a/templates/users/cart.html
+++ b/templates/users/cart.html
@@ -14,10 +14,10 @@
         <tbody>
             {% for item in cart_items %}
             <tr>
-                <td>{{ item.name }}</td>
-                <td>€{{ item.price }}</td>
+                <td>{{ item.item.name }}</td> 
+                <td>€{{ item.item.price }}</td>
                 <td>{{ item.quantity }}</td>
-                <td>€{{ item.price * item.quantity }}</td>
+                <td>€{{ item.item.price * item.quantity }}</td>
             </tr>
             {% endfor %}
         </tbody>
