--- a/templates/shared/header.html
+++ b/templates/shared/header.html
@@ -22,6 +22,9 @@
                         <a class="nav-link text-dark" href="{{ url_for('user.cart') }}">Cart</a>
                     </li>
                     <li class="nav-item ms-3">
+                        <a class="nav-link text-dark" href="{{ url_for('user.account') }}">Account</a>
+                    </li>
+                    <li class="nav-item ms-3">
                         <a class="nav-link text-dark" href="{{ url_for('auth.logout') }}">Logout</a>
                     </li>
                     {% if current_user.is_admin %}
