Minor header update

--- a/templates/shared/header.html
+++ b/templates/shared/header.html
@@ -17,6 +17,9 @@
                         <a class="nav-link text-dark" href="{{ url_for('user.balance') }}">Balance: €{{ current_user.balance }}</a>
                     </li>
                     <li class="nav-item ms-3">
+                        <a class="nav-link text-dark" href="{{ url_for('user.order_history') }}">Orders history</a>
+                    </li>
+                    <li class="nav-item ms-3">
                         <a class="nav-link text-dark" href="{{ url_for('user.cart') }}">Cart</a>
                     </li>
                     <li class="nav-item ms-3">
