--- a/templates/shared/shop.html
+++ b/templates/shared/shop.html
@@ -1,16 +1,23 @@
 {% extends "shared/layout.html" %}
 {% block content %}
-<div class="row">
-    <div class="col-12">
-        <h2 class="text-center">Products</h2>
-        <div class="list-group">
+<div class="container">
+    
+    <div class="list-group">
+        <div class="list-group-item d-flex justify-content-between align-items-center font-weight-bold">
+            <div class="col-md-4">Product</div>
+            <div class="col-md-4">Description</div>
+            <div class="col-md-4">Action</div>
+        </div>
         {% for product in products %}
             <div class="list-group-item d-flex justify-content-between align-items-center">
-                <div>
-                    <h5 class="mb-1">{{ product.name }}</h5>
+                <div class="col-md-4">
+                    <h4 class="mb-1">{{ product.name }}</h4>
                     <p class="mb-1">€{{ product.price }} - {{ product.stock }} in stock</p>
                 </div>
-                <div>
+                <div class="col-md-4">
+                    <h6 class="mb-1">{{ product.description }}</h6>
+                </div>
+                <div class="col-md-4 text-right">
                     <form action="{{ url_for('user.add_to_cart') }}" method="POST">
                         {{ form.hidden_tag() }} 
                         <input type="hidden" name="product_id" value="{{ product.item_id }}">
@@ -20,7 +27,6 @@
                 </div>
             </div>
         {% endfor %}
-        </div>
     </div>
 </div>
 {% endblock %}
