--- a/app/templates/users/account.html
+++ b/app/templates/users/account.html
@@ -2,10 +2,17 @@
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <h2 class="text-center">User: {{ user.username }}</h2>
-        <h5 class="text-center">email: {{ user.email }}</h5>
-        <form method="POST" action="{{ url_for('user.order_history') }}">
-                <button type="submit" class="btn btn-success btn-lg w-100">View order history</button>
+        <form method="POST" action="{{ url_for('user.change_name') }}">
+            <label for="username">User:</label><input id="username" name="username" type="text" value="{{ user.username }}">
+            <button type="submit" class="btn btn-danger btn-lg ">Update username</button>
+        </form>
+        <!-- <h5 class="text-center">email: {{ user.email }}</h5> -->
+        <form method="GET" action="{{ url_for('user.change_password') }}">
+
+            <button type="submit" class="btn btn-danger btn-lg w-100">Set new password</button>
+        </form>
+        <form>
+                <button type="submit" class="btn btn-danger btn-lg w-100">View order history</button>
         </form>
         {% if error %}
         <div class="alert alert-danger" role="alert">
