--- a/app/templates/users/account.html
+++ b/app/templates/users/account.html
@@ -3,25 +3,28 @@
 <div class="row justify-content-center">
     <div class="col-md-6">
         <form method="POST" action="{{ url_for('user.change_name') }}">
-            <label for="username">User:</label><input id="username" name="username" type="text" value="{{ user.username }}">
-            <button type="submit" class="btn btn-danger btn-lg ">Update username</button>
+            <label for="username">Username:</label>
+            <input id="username" name="username" type="text" value="{{ user.username }}">
+            <button type="submit" class="btn btn-danger btn-lg">Update Username</button>
         </form>
         <form method="POST" action="{{ url_for('user.change_email') }}">
-            <label for="email">User:</label><input id="email" name="email" type="text" value="{{ user.email }}">
-            <button type="submit" class="btn btn-danger btn-lg ">Update email</button>
+            <label for="email">Email:</label>
+            <input id="email" name="email" type="text" value="{{ user.email }}">
+            <button type="submit" class="btn btn-danger btn-lg">Update Email</button>
         </form>
         <form method="GET" action="{{ url_for('user.change_password') }}">
-
-            <button type="submit" class="btn btn-danger btn-lg w-100">Set new password</button>
+            <button type="submit" class="btn btn-danger btn-lg w-100">Set New Password</button>
         </form>
-        <form>
-                <button type="submit" class="btn btn-danger btn-lg w-100">View order history</button>
+        <form method="GET" action="{{ url_for('user.order_history') }}">
+            <button type="submit" class="btn btn-danger btn-lg w-100">View Order History</button>
         </form>
-        {% if error %}
-        <div class="alert alert-danger" role="alert">
-            {{ error }}
-        </div>
-        {% endif %}
+        {% for message in get_flashed_messages() %}
+            <div class="alert alert-danger" role="alert">
+                {% for line in message.split('\n') %}
+                    {{ line }}<br>
+                {% endfor %}
+            </div>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
