--- a/app/templates/shared/header.html
+++ b/app/templates/shared/header.html
@@ -4,8 +4,8 @@
             <a class="navbar-brand text-danger fw-bold display-4 me-5" href="{{ url_for('user.shop') }}">PARPORA</a>
         </div>
         <div class="d-flex align-items-center flex-grow-1">
-            <form class="d-flex me-3 flex-grow-1" role="search">
-                <input class="form-control me-2 flex-grow-1" type="search" placeholder="Search for products, e.g., milk" aria-label="Search">
+            <form class="d-flex me-3 flex-grow-1" role="search" method="GET" action="{{ url_for('user.search') }}">
+                <input class="form-control me-2 flex-grow-1" name="query" type="search" placeholder="Search for products, e.g., milk" aria-label="Search">
                 <button class="btn btn-outline-danger" type="submit">Search</button>
             </form>
             <ul class="navbar-nav d-flex flex-row">
