--- a/app/templates/admin/user_details.html
+++ b/app/templates/admin/user_details.html
@@ -1,5 +1,9 @@
 {% extends "shared/layout.html" %}
 {% block content %}
+<div class="container mt-4">
+    <div class="mb-3">
+        <a href="{{ url_for('admin.admin_dashboard') }}" class="btn btn-secondary">Back to Admin Panel</a>
+    </div>
     <h2>User Details</h2>
     <ul>
         <li>ID: {{ user.id }}</li>
@@ -9,4 +13,5 @@
         <li>Admin: {{ user.is_admin }}</li>
         <li>Created At: {{ user.created_at }}</li>
     </ul>
+</div>
 {% endblock %}
