--- a/app/templates/shared/index.html
+++ b/app/templates/shared/index.html
@@ -24,12 +24,13 @@
         {% for product in products %}
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 product-item">
                 <div class="card">
+                    <img src="{{ url_for('static', filename=product.image_path) }}" alt="{{ product.name }}" class="product-image">
                     <div class="card-body">
                         <h5 class="card-title">{{ product.name }}</h5>
-                        <p class="card-text">€{{ product.price }} - {{ product.stock }} in stock</p>
+                        <p class="card-text">€{{ product.price }} - {{ product.quantity }} in stock</p>
                         <form action="{{ url_for('user.add_to_cart') }}" method="POST">
                             {{ form.hidden_tag() }} 
-                            <input type="hidden" name="product_id" value="{{ product.item_id }}">
+                            <input type="hidden" name="product_id" value="{{ product.id }}">
                             <input type="hidden" name="quantity" value="1">
                             <button type="submit" class="btn btn-danger btn-lg">Add to cart</button>
                         </form>
